# ME5413-Final-Project-Group6

./: .gitignore  .gitmodules  README.md  frames.gv  start.sh
pcd_map/: detection_results.json
scripts/: nav1.sh  nav1_1.sh  start.sh
src/final_demo/: CMakeLists.txt  package.xml
src/final_demo/launch/: ndt_localization.launch  ndt_localization_maunal.launch
src/final_demo/scripts/: b_fusion_node copy.py  b_fusion_node.py  hello.py  ndt_global_map.py  odom2map.py  read_pointcloud.py  t_pcd2img_projection.py  world2map.py  world2map_bag.py
src/interactive_tools/: CMakeLists.txt  rviz_plugin.xml
src/interactive_tools/include/interactive_tools/: planner_selector_panel.h  plotjuggler_panel.hpp
src/interactive_tools/resource/: planner_selector_panel.ui
src/interactive_tools/src/: interactive_tools_plugins.cpp  planner_selector_panel.cpp  plotjuggler_panel.cpp
src/jackal_control/: CMakeLists.txt  package.xml
src/jackal_control/config/: control.yaml  robot_localization.yaml
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo
src/jackal_final_nav/: CMakeLists.txt  package.xml
src/jackal_navigation/: CMakeLists.txt  package.xml
src/jackal_navigation/launch/: gotodestination.launch  imu_filter.launch  navigation.launch  navigation1.launch  navigation2.launch
src/jackal_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/jackal_navigation/params/: base_local_planner_params.yaml  (+1 more)
src/me5413_bringup/: CMakeLists.txt  package.xml
src/me5413_control/: CMakeLists.txt  package.xml
src/me5413_evaluation/: CMakeLists.txt  package.xml
src/me5413_localization/: CMakeLists.txt  package.xml
src/me5413_mapping/: CMakeLists.txt  package.xml
src/me5413_navigation/: CMakeLists.txt  package.xml
src/me5413_perception/: CMakeLists.txt  package.xml
src/me5413_perception/config/: lidar_params.yaml  perception.yaml
src/me5413_perception/launch/: me5413_perception.launch  me5413_perception_ori.launch
src/me5413_perception/rviz/: fast.rviz  me5413_perception.rviz  me5413_projection.rviz  pcd2img_projection.rviz
src/me5413_perception/scripts/: 1111.txt  adaptive_navigator.py  clu_pcd_v0.5.py  fallback_navigator.py  fsm_visualize.py  fusion_merged_node.py  fusion_node.py  pseudo_status.py  pseudo_status_v0.1.py  pub_3d_bbox copy.py  pub_3d_bbox.py  pub_nav_goal.py  pub_nav_goal_v0.1.py  pub_nav_goal_v0.3.py  pub_nav_goal_v1.0.py  pub_nav_goal_v1.1.py  pub_target.py  pub_target_v0.1.py  pub_target_v0.2.py  target_detect.py  visualize_fusion.py  yolo_detect.py
src/me5413_perception/scripts/detection/: build_models.py  cnn_detection.py  cnn_train.py  knn_detect.py  knn_train.py
src/me5413_planning/: CMakeLists.txt  package.xml
src/me5413_world/: CMakeLists.txt
src/percep_demo/: CMakeLists.txt  package.xml
(+104 files in other folders)
